# exampleBasedPlastic

./: .gitignore  .gitmodules  Quat.h  README  SimpleVector.hpp  barrelCameraInfo.xml  bridgeCamera.xml  collisions.cpp  couplingConstraint.h  couplingConstraintSolver.cpp  couplingConstraintSolver.h  decomposeLaplacian.cpp  deleteFrames.sh  egTraverser.cpp  egTraverser.h  eigenTypedefs.h  errorView.cpp  exampleGraph.cpp  exampleGraph.h  fem.H  fem.cpp  globalMatrix.H  globalMatrix.cpp  grip.H  grip.cpp  impulseTester.cpp  inOrderCopy.py  kernels.h  main.cpp  makeHailstorm.py  makefile  newImpulseTester.cpp  obstacle.H  obstacle.cpp  openglViewer.cpp  plasticBody.cpp  plasticBody.h  plasticObject.cpp  plasticObject.h  plasticPiece.cpp  (+19 more)
Common/: makefile  slArray.H  slArray.cpp  slBounds.H  slBounds.cpp  slMatrix.cpp  slRotations.cpp  slUtil.H  slUtil.cpp  slVector.H
bullet-2.82-r2704/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cppitertools/: range.hpp
frames/: .gitignore
inputFiles/: adamsCarLaunch.json  adamsCarLaunchColors.json  adamsCarLaunchPlastic.json  adamsCarLaunchPlasticLowRes.json  adamsCarLaunchPlasticMedRes.json  adamsSpaceCrash.json  adamsSpaceCrashColors.json  barbell.json  barrelStackParams.json  barrels.json  barrels2.json  barrels4Examples.json  barrelsGlobalAndLocal.json  barrelsLocal.json  bowlingForHail.json  bowlingForHail2.json  bowlingForHailColors.json  (+76 more)
sphere_pack/vtk/: CMakeLists.txt  parse_json.cxx  parse_json.h  signed_dist.cpp  sphere_pack.cpp  sphere_pack.cxx  sphere_resize.cxx  sphere_txt_to_obj.cxx  test.json
(+411 files in other folders)
